fix:Delete button not aligned in collapsed mode

--- a/app/components/home.module.scss
+++ b/app/components/home.module.scss
@@ -218,7 +218,7 @@
 }
 
 .narrow-sidebar {
-  .sidebar-header{
+  .sidebar-header {
     padding-top: 14px;
   }
   .sidebar-title,
@@ -287,7 +287,7 @@
   }
 
   .chat-item-delete {
-    top: 15px;
+    top: 18px;
   }
 
   .chat-item:hover > .chat-item-delete {
